--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
-    <h1>Hello World</h1>	
+<body>
+    <h1>Titlu</h1>
+    <p>............</p>
+</body>	
